--- a/style.css
+++ b/style.css
@@ -1,253 +1,273 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 body {
-  background-color: rgba(35, 35, 35, 0.150);
+background-color: rgb(35, 35, 35);
 }
 
 main {
-  width: 100vw;
+width: 100vw;
 }
 
 header {
-    width: 100vw;
-    height: 8vh;
-    background-color: rgba(35, 35, 35, 1);
+  width: 100vw;
+  height: 8vh;
+  background-color: rgba(35, 35, 35);
 }
 
 #logo {
-  margin-left: 20px;
-  width: 60px;
-  height: 60px;
-  align-self: center;
+margin-left: 20px;
+width: 60px;
+height: 60px;
+align-self: center;
 }
 
 a {
-  text-decoration: none;
-  color: rgba(35, 35, 35, 1);
-  opacity:1;
-  font-family: 'work sans', sans serif;
-  font-size: 1.5em;
-  font-weight: 400;
-  transition: 200ms;
+text-decoration: none;
+color: rgba(35, 35, 35);
+opacity:1;
+font-family: 'work sans', sans serif;
+font-size: 1.5em;
+font-weight: 400;
+transition: 200ms;
 }
 
 a:hover {
-  opacity:0.5;
+opacity:0.5;
+}
+
+section {
+width: 90vw;
+height: 120vh;
+margin: auto;
+box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.37);
+}
+
+#inicio {
+height: 92vh;
+width: 100vw;
+border: 0px 0px 10px rgba(35, 35, 35, 0.26);
+}
+
+video {
+width: 100vw;
+height: 92vh;
+position: relative;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+object-fit: cover;
+}
+
+h2 {
+padding-top: 40px;
+text-align: center;
+font-size: 2.2em;
+color: rgba(238, 238, 238);
+}
+
+hr {
+background-color: rgba(238, 238, 238, 1);
+margin: 40px 0px 40px 0px;
+box-shadow: none;
+}
+
+#lasthr {
+margin: 40px 0px 0px 0px;
+}
+
+p {
+font-size: 1.5em;
+text-align: justify;
+color: rgba(238, 238, 238);
+}
+
+#sapucaia, #canoas, #saoleo {
+text-align: start;
+font-size: 1.5em;
+margin-bottom: 20px;
+}
+
+h3 {
+font-size: 2em;
+margin-bottom: 30px;
+color: rgba(238, 238, 238);
+}
+h4 {
+font-size: 1.8em;
+margin-bottom: 10px;
+color: rgba(238, 238, 238);
+}
+
+.imagefundo {
+position: absolute;
+margin-top: 10px;
+width: 100vw;
+height: 75vh;
+left: 0;
+opacity: 0.2;
+z-index: -1;
+object-fit: cover;
+object-position: 80% 10%;
+}
+
+#scroll4 {
+box-shadow: none;
+height: 100%;
+}
+
+footer {
+display: flex;
+justify-content: space-between;
+width: 100vw;
+height: 80px;
+background-color: rgba(35, 35, 35);
+}
+
+#imglogoh, #imglogof{
+width: 60px;
+height: 60px;
+border-radius: 10px;
+}
+
+#media {
+display: flex;
+align-items: center;
+margin-right: 20px;
+}
+
+#youtubei {
+width: 50px;
+height: 35px;
+}
+
+#instagrami {
+width: 40px;
+height: 40px;
+margin-right: 10px;
 }
 
 nav {
-  display: flex;
-  background-color: #1e1e2300;
-  height: 8vh;
-  justify-content: space-between;
-  transition-duration: 0.2s;
+display: flex;
+background-color: #1e1e2300;
+height: 8vh;
+justify-content: space-between;
+transition-duration: 0.2s;
 }
 
 #menuToggle input:checked
 {
-  display: flex;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-  position: absolute;
-  opacity: 0;
-  z-index: 2;
-  transform: translateY(-10px);
+display: flex;
+width: 30px;
+height: 30px;
+cursor: pointer;
+position: absolute;
+opacity: 0;
+z-index: 2;
+transform: translateY(-10px);
 }
 
 #menuToggle {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  align-items: flex-end;
-  margin-right: 10px;
-  top: 30px;
-  z-index: 1;
-  -webkit-user-select: none;
-  user-select: none;
+display: flex;
+flex-direction: column;
+position: relative;
+align-items: flex-end;
+margin-right: 10px;
+top: 30px;
+z-index: 1;
+-webkit-user-select: none;
+user-select: none;
 }
 
 #menuToggle input
 {
-  display: flex;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-  position:absolute;
-  opacity: 0;
-  z-index: 2;
-  transform: translateX(3px) translateY(-4px);
+display: flex;
+width: 30px;
+height: 30px;
+cursor: pointer;
+position:absolute;
+opacity: 0;
+z-index: 2;
+transform: translateX(3px) translateY(-4px);
 }
 
 #menuToggle span
 {
-  display: flex;
-  width: 29px;
-  height: 2px;
-  margin-bottom: 5px;
-  position: relative;
-  background: rgba(238, 238, 238, 1);
-  border-radius: 3px;
-  z-index: 1;
-  opacity: 100;
-  transform-origin: 5px 0px;
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
+display: flex;
+width: 29px;
+height: 2px;
+margin-bottom: 5px;
+position: relative;
+background: rgba(238, 238, 238, 1);
+border-radius: 3px;
+z-index: 1;
+opacity: 100;
+transform-origin: 5px 0px;
+transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+            background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+            opacity 0.55s ease;
 }
 
 #menuToggle span:first-child
 {
-  transform-origin: 0% 0%;
+transform-origin: 0% 0%;
 }
 
 #menuToggle span:nth-last-child(2)
 {
-  transform-origin: 0% 100%;
+transform-origin: 0% 100%;
 }
 
 #menuToggle input:checked ~ span
 {
-  opacity: 1;
-  transform: rotate(45deg) translate(-3px, -1px);
-  background: #36383F;
+opacity: 1;
+transform: rotate(45deg) translate(-3px, -1px);
+background: #36383F;
 }
 #menuToggle input:checked ~ span:nth-last-child(3)
 {
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
+opacity: 0;
+transform: rotate(0deg) scale(0.2, 0.2);
 }
 
 #menuToggle input:checked ~ span:nth-last-child(2)
 {
-  transform: rotate(-45deg) translate(0, -1px);
+transform: rotate(-45deg) translate(0, -1px);
 }
 
 #menu
 {
-  display: none;
-  position: absolute;
-  width: 60vw;
-  height: 100vh;
-  box-shadow: 0 0 10px #85888C;
-  margin: -50px -10px 0 -50px;
-  padding: 50px;
-  padding-top: 125px;
-  background-color: rgba(238, 238, 238, 1);
-  -webkit-font-smoothing: antialiased;
-  transform-origin: 0% 0%;
-  transform: translate(-15%, 0);
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+display: none;
+position: absolute;
+width: 60vw;
+height: 100vh;
+box-shadow: 0 0 10px #85888C;
+margin: -50px -10px 0 -50px;
+padding: 50px;
+padding-top: 125px;
+background-color: rgba(238, 238, 238, 1);
+-webkit-font-smoothing: antialiased;
+transform-origin: 0% 0%;
+transform: translate(-15%, 0);
+transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
 #menu li
 {
-  padding: 10px 0;
-  transition-delay: 2s;
+padding: 10px 0;
+transition-delay: 2s;
 }
 
 ul {
-  padding: 0;
-  list-style-type: none;
+padding: 0;
+list-style-type: none;
 }
 
 #menuToggle input:checked ~ ul
 {
-  transform: none;
-  display: block;
-}
-
-section {
-  width: 90vw;
-  height: 120vh;
-  margin: auto;
-  box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.37);
-}
-
-#inicio {
-  height: 92vh;
-  width: 100vw;
-}
-
-video {
-  width: 100vw;
-  height: 92.5vh;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  object-fit: cover;
-}
-
-h2 {
-  padding-top: 40px;
-  text-align: center;
-  font-size: 2.2em;
-}
-
-hr {
-  background-color: rgba(35, 35, 35, 1);
-  margin: 40px 0px 40px 0px;
-  border: 1px solid rgba(35, 35, 35, 1);
-  box-shadow: none;
-}
-
-p {
-  font-size: 1.7em;
-  text-align: justify;
-}
-
-#sapucaia, #canoas, #saoleo {
-  text-align: start;
-  font-size: 1.5em;
-  margin-bottom: 20px;
-}
-
-h3 {
-  font-size: 2em;
-  margin-bottom: 30px;
-}
-h4 {
-  font-size: 1.8em;
-  margin-bottom: 10px;
-}
-
-#scroll4 {
-  box-shadow: none;
-  height: 100%;
-}
-
-footer {
-  display: flex;
-  justify-content: space-between;
-  width: 100vw;
-  height: 80px;
-  background-color: rgba(35, 35, 35, 1);
-}
-
-#imglogoh, #imglogof{
-  width: 60px;
-  height: 60px;
-  border-radius: 10px;
-}
-
-#media {
-  display: flex;
-  align-items: center;
-  margin-right: 20px;
-}
-
-#youtubei {
-  width: 50px;
-  height: 35px;
-}
-
-#instagrami {
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
+transform: none;
+display: block;
 }
