--- a/style.css
+++ b/style.css
@@ -43,7 +43,6 @@ section {
 width: 90vw;
 height: 120vh;
 margin: auto;
-box-shadow: 0px 15px 10px -15px rgba(0, 0, 0, 0.37);
 }
 
 #inicio {
@@ -60,6 +59,7 @@ top: 50%;
 left: 50%;
 transform: translate(-50%,-50%);
 object-fit: cover;
+opacity: 0.6;
 }
 
 h2 {
@@ -106,12 +106,20 @@ color: rgba(238, 238, 238);
 position: absolute;
 margin-top: 10px;
 width: 100vw;
-height: 65vh;
+height: 120vh;
 left: 0;
-opacity: 0.2;
+opacity: 0.1;
 z-index: -1;
 object-fit: cover;
-object-position: 80% 10%;
+object-position: 40% 10%;
+}
+
+#maos {
+  object-position: 55% 10%;
+}
+
+#nata {
+  object-position: 50% 10%;
 }
 
 #scroll4 {
