--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@ background-color: rgb(35, 35, 35);
 }
 
 main {
-width: 100vw;
+width: 100%;
 }
 
 header {
-  width: 100vw;
+  width: 100%;
   height: 8vh;
   background-color: rgba(35, 35, 35);
 }
@@ -47,11 +47,11 @@ margin: auto;
 
 #inicio {
 height: 92vh;
-width: 100vw;
+width: 100%;
 }
 
 video {
-width: 100vw;
+width: 100%;
 height: 92vh;
 position: relative;
 top: 50%;
@@ -104,7 +104,7 @@ color: rgba(238, 238, 238);
 .imagefundo {
 position: absolute;
 margin-top: 10px;
-width: 100vw;
+width: 100%;
 height: 100vh;
 left: 0;
 opacity: 0.4;
@@ -133,7 +133,7 @@ height: 100%;
 footer {
 display: flex;
 justify-content: space-between;
-width: 100vw;
+width: 100%;
 height: 80px;
 background-color: rgba(35, 35, 35);
 }
